<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/b7"
    tools:context=".Activites.Sign_In">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#F73E5D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/vs_et1"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#CDCDCD"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/vs_tv1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vs_tv1"
            app:layout_constraintTop_toTopOf="@+id/vs_tv1" />

        <TextView
            android:id="@+id/vs_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/name"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/vs_et2"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/enter_your_phone"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#CDCDCD"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/vs_tv2"
            app:layout_constraintEnd_toEndOf="@+id/vs_et1"
            app:layout_constraintStart_toStartOf="@+id/vs_et1"
            app:layout_constraintTop_toTopOf="@+id/vs_tv2" />

        <TextView
            android:id="@+id/vs_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/phone"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/vs_tv3"
            app:layout_constraintEnd_toEndOf="@+id/vs_tv1"
            app:layout_constraintStart_toStartOf="@+id/vs_tv1"
            app:layout_constraintTop_toBottomOf="@+id/vs_tv1" />

        <EditText
            android:id="@+id/vs_et3"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#CDCDCD"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/vs_tv3"
            app:layout_constraintEnd_toEndOf="@+id/vs_et2"
            app:layout_constraintStart_toStartOf="@+id/vs_et2"
            app:layout_constraintTop_toTopOf="@+id/vs_tv3" />

        <TextView
            android:id="@+id/vs_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/vs_tv2"
            app:layout_constraintStart_toStartOf="@+id/vs_tv2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/vs_b1"
        style="@style/trdButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/sign_in"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>